--- a/assets/style.css
+++ b/assets/style.css
@@ -105,6 +105,7 @@ body{
     border-radius: 10px;
 }
 .box1 .profile img{
+    width: 97%;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     padding-top: 0%;
